# coursework_1

./: .env_template  README.md  main.py  pyproject.toml
src/: config.py  function_operation_report.txt  logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py
