[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
types-requests = "^2.32.0.20240914"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
